# NorskPraksis

./: .gitignore  AGENTS.md  Agent_Deep_Dive.md  Agent_Development_Guide.md  PHASE_1_ROAD_MAP.md  PHASE_2_ROAD_MAP.md  PHASE_3_ROAD_MAP.md  PHASE_4_ROAD_MAP.md  README.md  codebase_evaluation.md  walkthrough_phase2.md
.github/skills/codebase-context-auditor/: SKILL.md
Docs/: Agent_Architecture_Diagrams.md  PHASE_5_ROAD_MAP.md  README.md  walkthrough_phase4.md
Docs/SPEC_N_ROADMAPs/: walkthrough_phase1.md  walkthrough_phase5.md
norsk_praksis/: README.md  ROAD_MAP_PHASE_1.md  ROAD_MAP_PHASE_2.md  ROAD_MAP_PHASE_3.md  ROAD_MAP_PHASE_4.md  ROAD_MAP_PHASE_5.md  SPEC_DEV.md  mcp_vocab_server.py  pyproject.toml  walkthrough_phase1.md
norsk_praksis/norsk_agent/: agent.py  prompts.py  scenarios.py  tools.py
norsk_praksis/norsk_agent/.adk/: session.db
norsk_praksis/src/norsk_praksis/: __init__.py
norsk_praksis/src/norsk_praksis/norsk_agent/: agent.py
norsk_praksis/tests/: test_agent.py
